# lanecho

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  events.ts  index.css  main.tsx  theme.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  Tauri.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  history.rs  lib.rs  locale.rs  main.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/desktop/src/components/: DeviceList.tsx  HistoryPanel.tsx  ModalShell.tsx  PairRequestModal.tsx
apps/desktop/src/hooks/: useLanecho.ts
apps/desktop/src/i18n/: en.ts  index.tsx  zh.ts
crates/lanecho-cli/: Cargo.toml
crates/lanecho-core/src/: config.rs  identity.rs  lib.rs  protocol.rs
crates/lanecho-core/src/clipboard/: mod.rs  sensitive.rs
crates/lanecho-core/src/sync/: mod.rs  net.rs
